1st commit them index1.html

--- a/index1.html
+++ b/index1.html
@@ -6,9 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Practise mệt quá 2 ơi</h1>
-    <h2>Sửa lần 1</h2>
-    <h3>Sửa lần 2</h3>
-    <h4>Đã 12h khuya</h4>
+    <h1>Trương Minh Tiến đang Practise</h1>
   </body>
 </html>
